<resources>
    <string name="app_name">ASP</string>
    <string name="app_title">Advanced System Protection</string>
    <string name="disable_switch">Disable</string>
    <string name="manage_packages">Manage Apps</string>
    <string name="manage_permissions">Manage Permissions</string>
    <string name="todo">TODO</string>
    <string name="disable_camera">Disable Camera</string>
    <string name="password_length">Max Retries before Factory Reset</string>
    <string name="advanced_system_protection">Advanced System Protection</string>
    <string name="advanced_system">Advanced System</string>
    <string name="protection">Protection</string>
    <string name="package_icon">Package Icon</string>
    <string name="logo">Logo</string>
    <string name="active_and_protecting">Active And Protecting</string>
    <string name="minimum_length">Minimum Length</string>
    <string name="_20">20</string>
    <string name="_5">5</string>
    <string name="minimum_upper_case">Minimum Upper Case</string>
    <string name="minimum_lower_case">Minimum Lower Case</string>
    <string name="minimum_special_characters">Minimum Special Characters</string>
    <string name="save_settings">Save Settings</string>
    <string name="allow_traffic_without_vpn">Do Not Allow Traffic Without VPN</string>
    <string name="vpn_always_on">VPN Always on</string>
    <string name="max_wipe_retries">7</string>
    <string name="password_length_text">20</string>
    <string name="min_caps_text">1</string>
    <string name="min_lower_text">1</string>
    <string name="min_spl_char_text">1</string>
    <string name="minimum_number_text">Minimum Number</string>
    <string name="min_num_text">1</string>
</resources>
